--- a/profiles/apparmor/profiles/extras/postfix.master
+++ b/profiles/apparmor/profiles/extras/postfix.master
@@ -19,12 +19,11 @@ profile postfix-master /usr/lib/postfix/{sbin/,}master {
   capability net_bind_service,
   capability kill,
   capability dac_override,
+  capability dac_read_search,
 
-  signal send peer=/usr/lib/postfix/*,
   signal send peer=postfix-*,
   signal peer=@{profile_name},
 
-  unix (send receive) type=stream peer=(label=/usr/lib/postfix/*),
   unix (send receive) type=stream peer=(label=postfix-*),
 
   /etc/postfix/master.cf                       r,
