--- a/profiles/apparmor/profiles/extras/postfix.master
+++ b/profiles/apparmor/profiles/extras/postfix.master
@@ -11,7 +11,7 @@
 
 #include <tunables/global>
 
-profile postfix-master /usr/lib/postfix/{sbin/,}master {
+profile postfix-master /usr/lib/postfix/{bin/,sbin/,}master {
   #include <abstractions/base>
   #include <abstractions/nameservice>
   #include <abstractions/postfix-common>
@@ -32,21 +32,21 @@ profile postfix-master /usr/lib/postfix/{sbin/,}master {
   /{var/spool/postfix/,}private/tlsmgr            rwl,
   /{var/spool/postfix/,}public/{cleanup,flush,pickup,qmgr,showq,tlsmgr} rwl,
 
-  /usr/lib/postfix/{sbin/,}anvil               Px,
-  /usr/lib/postfix/{sbin/,}bounce              Px,
-  /usr/lib/postfix/{sbin/,}cleanup             Px,
-  /usr/lib/postfix/{sbin/,}flush               Px,
-  /usr/lib/postfix/{sbin/,}local               Px,
-  /usr/lib/postfix/{sbin/,}master              rmix,
-  /usr/lib/postfix/{sbin/,}nqmgr               Px,
-  /usr/lib/postfix/{sbin/,}proxymap            Px,
-  /usr/lib/postfix/{sbin/,}pickup              Px,
-  /usr/lib/postfix/{sbin/,}pipe                Px,
-  /usr/lib/postfix/{sbin/,}qmgr                Px,
-  /usr/lib/postfix/{sbin/,}scache              Px,
-  /usr/lib/postfix/{sbin/,}showq               Px,
-  /usr/lib/postfix/{sbin/,}smtp                Px,
-  /usr/lib/postfix/{sbin/,}smtpd               Px,
-  /usr/lib/postfix/{sbin/,}tlsmgr              Px,
-  /usr/lib/postfix/{sbin/,}trivial-rewrite     Px,
+  /usr/lib/postfix/{bin/,sbin/,}anvil               Px,
+  /usr/lib/postfix/{bin/,sbin/,}bounce              Px,
+  /usr/lib/postfix/{bin/,sbin/,}cleanup             Px,
+  /usr/lib/postfix/{bin/,sbin/,}flush               Px,
+  /usr/lib/postfix/{bin/,sbin/,}local               Px,
+  /usr/lib/postfix/{bin/,sbin/,}master              mrix,
+  /usr/lib/postfix/{bin/,sbin/,}nqmgr               Px,
+  /usr/lib/postfix/{bin/,sbin/,}proxymap            Px,
+  /usr/lib/postfix/{bin/,sbin/,}pickup              Px,
+  /usr/lib/postfix/{bin/,sbin/,}pipe                Px,
+  /usr/lib/postfix/{bin/,sbin/,}qmgr                Px,
+  /usr/lib/postfix/{bin/,sbin/,}scache              Px,
+  /usr/lib/postfix/{bin/,sbin/,}showq               Px,
+  /usr/lib/postfix/{bin/,sbin/,}smtp                Px,
+  /usr/lib/postfix/{bin/,sbin/,}smtpd               Px,
+  /usr/lib/postfix/{bin/,sbin/,}tlsmgr              Px,
+  /usr/lib/postfix/{bin/,sbin/,}trivial-rewrite     Px,
 }
