--- a/profiles/apparmor/profiles/extras/postfix.master
+++ b/profiles/apparmor/profiles/extras/postfix.master
@@ -2,6 +2,7 @@
 #
 #    Copyright (C) 2002-2006 Novell/SUSE
 #    Copyright (C) 2018 Canonical, Ltd.
+#    Copyright (C) 2019 Christian Boltz
 #
 #    This program is free software; you can redistribute it and/or
 #    modify it under the terms of version 2 of the GNU General Public
@@ -28,6 +29,8 @@ profile postfix-master /usr/lib/postfix/{bin/,sbin/,}master {
 
   /etc/postfix/master.cf                       r,
   /{var/spool/postfix/,}pid/master.pid            rwk,
+  /{var/spool/postfix/,}pid/unix.lmtp             wk,
+
   /{var/spool/postfix/,}private/*                 wl,
   /{var/spool/postfix/,}private/tlsmgr            rwl,
   /{var/spool/postfix/,}public/{cleanup,flush,pickup,qmgr,showq,tlsmgr} rwl,
@@ -37,6 +40,7 @@ profile postfix-master /usr/lib/postfix/{bin/,sbin/,}master {
   /usr/lib/postfix/{bin/,sbin/,}cleanup             Px,
   /usr/lib/postfix/{bin/,sbin/,}flush               Px,
   /usr/lib/postfix/{bin/,sbin/,}local               Px,
+  /usr/lib/postfix/{bin/,sbin/,}lmtp                mrPx,
   /usr/lib/postfix/{bin/,sbin/,}master              mrix,
   /usr/lib/postfix/{bin/,sbin/,}nqmgr               Px,
   /usr/lib/postfix/{bin/,sbin/,}proxymap            Px,
@@ -49,4 +53,6 @@ profile postfix-master /usr/lib/postfix/{bin/,sbin/,}master {
   /usr/lib/postfix/{bin/,sbin/,}smtpd               Px,
   /usr/lib/postfix/{bin/,sbin/,}tlsmgr              Px,
   /usr/lib/postfix/{bin/,sbin/,}trivial-rewrite     Px,
+
+  owner /var/lib/postfix/master.lock rwk,
 }
